# arrow-experiments

./: .asf.yaml  .gitattributes  .gitignore  NOTICE.txt  README.md
data/: README.md
data/arrow-commits/: README.md  arrow-commits.R  arrow-commits.arrows  arrow-commits.jsonl
data/rand-many-types/: Makefile  README.md  arrows-to-arrow.py  arrows-to-parquet.py  generate.py  parquet-to-duckdb.sql  parquet-to-sqlite.sql  random.arrow  random.arrows  random.duckdb  random.parquet  random.sqlite  requirements.txt
data/taxi-data/: README.md  train.parquet
dissociated-ipc/: CMakeLists.txt  README.md  cudf-flight-client.cc  cudf-flight-poc.cc  cudf-flight-server.cc  cudf-flight-ucx.cc  cudf-flight-ucx.h  ucx_client.cc  ucx_client.h  ucx_conn.cc  ucx_conn.h  ucx_server.cc  ucx_server.h  ucx_utils.cc  ucx_utils.h
http/: README.md
http/get_compressed/: README.md
http/get_compressed/curl/client/: README.md  client.sh
http/get_compressed/java/server/: pom.xml
http/get_compressed/python/client/: README.md  client.py  make_requests.sh
http/get_compressed/python/server/: README.md  server.py
http/get_indirect/: README.md
http/get_indirect/curl/client/: README.md  client.sh
http/get_indirect/python/: .gitignore
http/get_indirect/python/client/: README.md  client.py
http/get_indirect/python/server/: README.md  server.py
http/get_multipart/: README.md
http/get_multipart/python/client/: README.md  simple_client.py
http/get_multipart/python/server/: README.md  server.py
http/get_range/: README.md
http/get_range/curl/: .gitignore  README.md
http/get_range/curl/client/: README.md  client.sh
http/get_range/js/: .gitignore
http/get_range/js/server/: README.md  serve.json
http/get_simple/: README.md
http/get_simple/c_glib/client/: .gitignore  README.md  client.c
http/get_simple/cpp/: .gitignore
http/get_simple/cpp/client/: README.md  client.cpp
http/get_simple/csharp/client/: ArrowHttpClient.cs  README.md
http/get_simple/csharp/server/: ArrowHttpServer.cs  README.md  Server.csproj
http/get_simple/curl/client/: README.md  client.sh
http/get_simple/go/: .gitignore
http/get_simple/go/client/: README.md  client.go  go.mod
http/get_simple/go/server/: README.md  go.mod  server.go
http/get_simple/java/: .gitignore
http/get_simple/java/client/: README.md  pom.xml
http/get_simple/java/server/: README.md  pom.xml
http/get_simple/js/: .gitignore
http/get_simple/js/client/: README.md  client.js  package.json
http/get_simple/julia/: Project.toml
http/get_simple/julia/client/: README.md  client.jl
http/get_simple/julia/server/: README.md  server.jl
http/get_simple/matlab/: README.md  client.m
http/get_simple/python/client/: README.md  client.py
http/get_simple/python/client/urllib.request/: README.md  client.py
http/get_simple/python/server/: README.md  server.py
http/get_simple/python/server/fastapi_uvicorn/: README.md  server.py
http/get_simple/python/server/http.server/: README.md  server.py
http/get_simple/r/client/: README.md  client.R
http/get_simple/rs/: .gitignore  Cargo.toml
http/get_simple/rs/client/: Cargo.toml  README.md
http/get_simple/rs/client/src/: main.rs
http/get_simple/rs/server/: Cargo.toml  README.md
http/get_simple/rs/server/src/: main.rs
http/get_simple/ruby/client/: .gitignore  Gemfile  README.md  client.rb
http/get_simple/ruby/server/: Gemfile  README.md  config.ru
http/get_simple/swift/Client/: Package.swift  README.md
http/get_simple/swift/Client/Sources/: main.swift
http/get_simple/swift/Server/: Package.swift  README.md
http/get_simple/swift/Server/Sources/: main.swift
http/post_multipart/: README.md
http/post_simple/: README.md
http/post_simple/python/client/: README.md  client.py
http/post_simple/python/server/: README.md  server.py
(+3 files in other folders)
